Improved deprecations