@@ -206,12 +206,11 @@ public class DwellTimeModelCache implements org.transitclock.core.dataCache.Dwel
 
     @Override
     public Long predictDwellTime(StopPathCacheKey cacheKey, Headway headway) {
-
         DwellModel model = cache.get(cacheKey);
         if (model == null || headway == null) return null;
 
         if (model.predict((int) headway.getHeadway(), null) != null)
-            return new Long(model.predict((int) headway.getHeadway(), null));
+            return Long.valueOf(model.predict((int) headway.getHeadway(), null));
 
         return null;
     }
